# n64disasm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
configs/: ssb.us.yaml
src/: boolext.rs  config.rs  disasm.rs  main.rs
src/disasm/: common_insn.rs  csutil.rs  hwreg.rs  instruction.rs  labels.rs  memmap.rs  mipsinsn.rs  mipsvals.rs  mod.rs  pass1.rs  pass2.rs
src/disasm/pass1/: findfiles.rs  findlabels.rs  findsections.rs  jumps.rs  labeling.rs  linkinsn.rs  parsedata.rs  resolvelabels.rs  routinenl.rs
src/disasm/pass2/: bss.rs  data.rs  symbols.rs  text.rs
src/disasm/pass2/inc/: prelude.data.s  prelude.text.s
