[package]
name = "n64disasm"
version = "0.9.1"
authors = ["tehz <tehzz@users.noreply.github.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.3"
err-derive = "0.2.1"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
capstone = "0.6.0" 
arrayvec = "0.5.1"
log = "0.4.8"
simplelog = "0.7.4"
once_cell = "1.3"
rayon = "1.3"
ryu = "1.0.3"
